[package]
name = "clicurve"
version = "0.1.0"
edition = "2024"
description = "Terminal TensorBoard viewer — visualize training curves without a browser"
license = "MIT"
repository = "https://github.com/rfbr/clicurve"
keywords = ["tensorboard", "terminal", "tui", "metrics", "training"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
prost = "0.13"
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
crc32c = "0.6"
walkdir = "2"

[profile.release]
opt-level = 2
